<resources>
    <string name="app_name">FinTech Trader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_stocks">Stocks</string>
    <string name="menu_crypto">Crypto</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_support">Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name_label">Name</string>
    <string name="fname">First</string>
    <string name="lname">Last</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Email Address</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="secure_password">Tips for Securing Account</string>
    <string name="github">GitHub</string>
    <string name="stock_spinner_label">Select a Stock</string>
    <string name="crypto_spinner_label">Select a Crypto</string>
    <string name="buy_button_label">Buy</string>
    <string name="sell_button_label">Sell</string>
    <string name="graph_predict">Graph Showing Predictions of Current Stock or Crypto</string>
    <string name="payment_title">Add Funds</string>

    <!-- Stock/Crypto Prices for 1 Share -->
    <string name="adobe_name">Adobe</string>
    <string name="amazon_name">Amazon</string>
    <string name="apple_name">Apple</string>
    <string name="google_name">Google</string>
    <string name="microsoft_name">Microsoft</string>
    <string name="bitcoin_name">Bitcoin</string>
    <string name="ethereum_name">Ethereum</string>

    <!-- Stock/Crypto Prices for 1 Share -->
    <string name="adobe">$325.58</string>
    <string name="amazon">$88.04</string>
    <string name="apple">$137.35</string>
    <string name="google">$90.58</string>
    <string name="microsoft">$248.53</string>
    <string name="bitcoin">$16,819.00</string>
    <string name="ethereum">$1,194.71</string>


    <string-array name="stocks">
        <item>Adobe</item>
        <item>Amazon</item>
        <item>Apple</item>
        <item>Google</item>
        <item>Microsoft</item>
    </string-array>

    <string-array name="cryptos">
        <item>Bitcoin</item>
        <item>Ethereum</item>
    </string-array>
</resources>